2005-12-22  Jb Evain  <jbevain@gmail.com>

	* CodeGen/templates/NamedCollectionImplem.cs
	  Mono.Cecil/ExternTypeCollection.cs
	  Mono.Cecil/TypeDefinitionCollection.cs
	  Mono.Cecil/TypeReferenceCollection.cs:
		Don't add existing values.

	* Mono.Cecil/ModuleDefinition.cs:
		Protect import from null refs.

2005-12-21  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/StructureWriter.cs:
		Don't increment pdb age. Not Cecil's job.

	* Mono.Cecil.Cil/ICilWorker.cs
	  Mono.Cecil.Cil/CilWorker.cs:
		Add a new replace method.

2005-12-20  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/StructureWriter.cs:
		Ensure every assembly reference is processed.

	* Mono.Cecil/ReflectionHelper.cs:
		Don't assume the cache is magically loaded.
		Aka: most stupid bug of the year.

2005-12-19  Jb Evain  <jbevain@gmail.com>

	* CodeGen/templates/DebugHeader.cs
	  Mono.Cecil.Binary/DebugHeader.cs
	  Mono.Cecil.Binary/DebugStoreType.cs:
		New files to store debug header infos.
	* Mono.Cecil.dll.sources: updated
	* CodeGen/cecil.xml
	  CodeGen/cecil-gen.rb
	  Mono.Cecil/StructureWriter.cs
	  Mono.Cecil.Binary/IBinaryVisitor.cs
	  Mono.Cecil.Binary/ImageWriter.cs
	  Mono.Cecil.Binary/Image.cs
	  Mono.Cecil.Binary/ImageInitializer.cs
	  Mono.Cecil.Binary/BaseImageVisitor.cs
	  Mono.Cecil.Binary/ImageReader.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs:
		Read and write debug header.

	* CodeGen/templates/ImageWriter.cs
	  Mono.Cecil.Binary/ImageWriter.cs:
		Revert revision 54409.

2005-12-14  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Cil/ICilWorker.cs
	  Mono.Cecil.Cil/CilWorker.cs:
		Add a remove method.

	* CodeGen/templates/ImageWriter.cs
	  Mono.Cecil.Binary/ImageWriter.cs:
		Don't allocate potential big arrays here.

2005-12-13  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Metadata/MetadataWriter.cs:
		Set the correct version for .net 2 assemblies.
		Correctly write embedded resources.
		Fix #76963.

2005-12-03  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/MethodSpecification.cs: